apps/httpd-demo/route.yaml
# HTTPD Demo Route
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: httpd-demo
  namespace: httpd-demo
  labels:
    app: httpd-demo
    app.kubernetes.io/name: httpd-demo
  annotations:
    openshift.io/host.generated: "true"
spec:
  to:
    kind: Service
    name: httpd-demo
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
